# RPi-Dashcam

./: .gitignore  Dockerfile  LICENSE  README.md  gunicorn-start.conf  main.py  requirements.txt  run.bash  settings.txt  setup.bash  supervisor.conf
camera/: launch.py  readme.md
camera/camera_interface/: launch.py
camera/camera_interface/src/: dashcam.py
dashcam/src/: camera_calibration.py  camera_intrinsics.py  dashcam.py  fast-api.py  getch.py  settings.py
dds/idl/: DashcamTypes.idl
modules/: README.md
modules/cpp/base_module/: base_module.cpp  base_module.hpp
modules/python/base_module/: base_module.py
modules/python/camera_interface/: camera_interface.py  config.json  requirements.txt
nginx/: default  default.conf  fastapi-app.conf
orchestrator/: CMakeLists.txt
orchestrator/config/: default_config.json
orchestrator/include/: config_manager.hpp  data_types.hpp  logger.hpp  module_manager.hpp  orchestrator.hpp
orchestrator/src/: config_manager.cpp  logger.cpp  module_manager.cpp  orchestrator.cpp  test.cpp
webserver/: images.html  index.html  settings.html  video.html
webserver/media/: basic icon.jfif
webserver/scripts/: script-main.js
webserver/styles/: colours.css  style-main.css
